# client-register-plasmoid

./: CMakeLists.txt  README.md
applets/: CMakeLists.txt
applets/clientregister/: CMakeLists.txt
applets/clientregister/knotifications5/: clientregister.notifyrc
applets/clientregister/package/: metadata.desktop  metadata.json
applets/clientregister/package/contents/ui/: main.qml
applets/clientregister/plugin/: ClientRegisterWidget.cpp  ClientRegisterWidget.h  ClientRegisterWidgetUtils.cpp  ClientRegisterWidgetUtils.h  plugin.cpp  plugin.h  qmldir
debian/: client-register-plasmoid.dirs  client-register-plasmoid.install  client-register-plasmoid.postinst  client-register-plasmoid.prerm  control  copyright  rules
po/: plasma_applet_org.kde.plasma.clientregister.pot  update_translations.sh
po/ca/: plasma_applet_org.kde.plasma.clientregister.po
po/ca@valencia/: plasma_applet_org.kde.plasma.clientregister.po
po/en_GB/: plasma_applet_org.kde.plasma.clientregister.po
po/es/: plasma_applet_org.kde.plasma.clientregister.po
